# simpleloginV1

./: .gitignore  Changelog.md  Commands.txt  LICENCE.txt  README.md  SECURITY.md  bannedusers.txt  login.py  pyproject.toml  user_1  user_1.txt  users.txt
simple_login_system.egg-info/: PKG-INFO  SOURCES.txt
simplelogin/: login.py
simplelogin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
